--- a/index.html
+++ b/index.html
@@ -10,30 +10,46 @@
 </head>
 
 <body>
-    <h1 class="title">Today</h1>
-    <div class="container">
-
-        <div class="col-1">
-            <h1>To-Do</h1>
-            <ul>
-                <li>to do 1</li>
-                <li>to do 2</li>
-                <li>to do 3</li>
-                <li>to do 4</li>
-            </ul>
+    <section class="whole">
+        <div class='container1'>
+            <div class="col1 rightborder1">
+                <h1>To-Do</h1>
+            </div>
+            <div class="col1 leftborder1">
+                <h1>Notes</h1>
+            </div>
         </div>
 
-        <div class="col-1">
-            <h1>Notes</h1>
-            <ul>
-                <li>Note 1</li>
-                <li>Note 2</li>
-                <li>Note 3</li>
-                <li>Note 4</li>
-            </ul>
-        </div>
+        <div class="container2">
+            <div class="col2 rightborder2">
+                <ul>
+                    <li>To-Do 1</li>
+                    <li>To-Do 2</li>
+                    <li>To-Do 3</li>
+                    <li>To-Do 4</li>
+                    <li>To-Do 5</li>
+                    <li>To-Do 6</li>
+                    <li>To-Do 7</li>
+                    <li>To-Do 8</li>
+                </ul>
+                <button>Add</button>
+            </div>
 
-    </div>
+            <div class="col2 leftborder2">
+                <ul>
+                    <li>Note 1</li>
+                    <li>Note 2</li>
+                    <li>Note 3</li>
+                    <li>Note 4</li>
+                    <li>Note 5</li>
+                    <li>Note 6</li>
+                    <li>Note 7</li>
+                    <li>Note 8</li>
+                </ul>
+                <button>Add</button>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
