--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
 <body>
     <section class="whole">
+        <div class='title'>
+            <h1>Today</h1>
+        </div>
         <div class='container1'>
             <div class="col1 rightborder1">
                 <h1>To-Do</h1>
