--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             <h1>To-Do</h1>
             <p>Click enter to add a new To-do, click the To-do to delete it.</p>
             <input id='input' type="text" placeholder="Add a To-do">
+            <button id="del">Delete</button>
         </div>
         <div class="bottom">
             <ul id='ul'>
-                <li></li>
             </ul>
         </div>
     </div>
