--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container">
         <div class="top">
             <h1>To-Do</h1>
-            <p>Click enter to add a new To-do, click the To-do to delete it.</p>
+            <p>Click enter to add a new To-do.</p>
             <input id='input' type="text" placeholder="Add a To-do">
             <button id="del">Delete</button>
         </div>
